--- a/src/style/parts/_header.scss
+++ b/src/style/parts/_header.scss
@@ -1,6 +1,10 @@
+.wrapper {
+    width: 100%;
+    height: 100vh;
+    background-image: url('/src/assets/backgrounds/Group 369.svg');
+}
+
 .header {
-    border-bottom: 1px solid #e2e9f0;
-    background: #101010;
     font-family: 'Proxima Nova';
 
     .navbar {
@@ -65,6 +69,7 @@
         flex-direction: column;
         background-color: #fff;
         width: 100%;
+        height: 55vh;
         border-radius: 10px;
         text-align: center;
         transition: 0.3s;
