--- a/src/style/parts/_collections.scss
+++ b/src/style/parts/_collections.scss
@@ -1,69 +1,81 @@
-.collections {
-    text-align: center;
-    margin: 0 249px;
-
+.collection {
     &__title {
-        display: flex;
-        justify-content: center;
-        margin: 100px auto 54px;
+        margin: 100px 0;
         font-weight: 700;
         font-size: 48px;
         line-height: 58px;
+        text-align: center;
     }
+}
 
+.collection-wrapper {
+    margin: 0 249px;
+}
 
-    .collections-item {
+.swiper {
+    width: 100%;
+    height: 100%;
+
+    .swiper-slide {
+        text-align: center;
+        border-radius: 20px;
+        padding: 20px;
         background: #E3E3E3;
-        border-radius: 38px;
-        max-width: 454px;
+        /* Center slide text vertically */
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
 
-        padding: 20px 0;
 
-        &__title {
-            font-weight: 600;
-            font-size: 24px;
-            line-height: 26px;
+        display: flex;
+        flex-direction: column;
+
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+
+        img {
+            display: block;
+            width: 100%;
+            height: auto;
+            object-fit: cover;
         }
 
-        &__desc {
-            padding: 0 20px;
+        .collection-item-title {
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 26px;
+            margin: 29px 0 15px;
+            color: #111010;
+        }
+
+        .collection-item-desc {
             font-weight: 400;
             font-size: 16px;
             line-height: 160%;
+
+            margin: 0 20px 24px;
             color: #3C3C3C;
         }
 
-        &__btn {
-            font-weight: 600;
-            font-size: 14px;
-            line-height: 16px;
-            margin: 24px 107px 30px;
-            padding: 18px 50px;
-
-            border: 2px solid #111010;
-            border-radius: 9px;
-            text-transform: uppercase;
-
-            color: #111010;
-            filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.5));
+        .btn {
+            padding: 16px 39px;
+            color: rgb(0, 0, 0);
+            border: 2px solid rgb(0, 0, 0);
+            border-radius: 15px;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 19px;
         }
     }
 }
 
-@media(max-width: 991px) {
-    .collections-item {
-        max-width: 310px;
-    }
-}
 
-@media(max-width:575px) {
-
-    .collections-item {
-        padding: 0 10px;
-        max-width: 280px;
-
-        &__img {
-            width: 100%;
-        }
-    }
+.swiper-pagination {
+    background-color: aqua;
 }
