--- a/src/style/parts/_products.scss
+++ b/src/style/parts/_products.scss
@@ -1,7 +1,7 @@
 .products {
     margin-top: 100px;
     width: 100%;
-    height: 968px;
+    height: 1000px;
     background: #111010;
     color: #fff;
 
@@ -14,7 +14,7 @@
     }
 
     .products-box {
-        margin: 60px 250px 80px;
+        margin: 60px 250px 0;
 
         .products-box-grid {
             display: grid;
