--- a/src/style/parts/_products.scss
+++ b/src/style/parts/_products.scss
@@ -15,6 +15,7 @@
 
     .products-box {
         margin: 60px 250px 0;
+        text-align: center;
 
         .products-box-grid {
             display: grid;
@@ -25,15 +26,17 @@
             height: 700px;
 
             .grid-item-desc {
-                text-align: center;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
                 position: absolute;
+                height: 25%;
                 bottom: 0;
                 left: 0;
                 right: 0;
                 background: linear-gradient(180deg, rgba(17, 16, 16, 0) 0%, rgba(17, 16, 16, 0.74) 72.92%);
                 backdrop-filter: blur(1.5px);
                 /* Note: backdrop-filter has minimal browser support */
-
                 border-radius: 0px 0px 20px 20px;
 
                 &__title {
@@ -53,7 +56,7 @@
                 grid-area: 1 / 1 / 3 / 2;
                 max-width: 454px;
                 max-height: 700px;
-                background-image: url('/src/assets/photos/products/bedroom.svg');
+                background-image: url('/src/assets/photos/products/bedroom.jpg');
                 background-repeat: no-repeat;
                 position: relative;
                 border-radius: 20px;
@@ -63,7 +66,7 @@
                 grid-area: 1 / 2 / 2 / 3;
                 max-width: 454px;
                 max-height: 335px;
-                background-image: url('/src/assets/photos/products/bathroom.svg');
+                background-image: url('/src/assets/photos/products/bathroom.jpg');
                 background-repeat: no-repeat;
                 position: relative;
                 border-radius: 20px;
@@ -73,7 +76,7 @@
                 grid-area: 1 / 3 / 2 / 4;
                 max-width: 454px;
                 max-height: 335px;
-                background-image: url('/src/assets/photos/products/outdoor.svg');
+                background-image: url('/src/assets/photos/products/outdoor.jpg');
                 background-repeat: no-repeat;
                 position: relative;
                 border-radius: 20px;
@@ -83,7 +86,7 @@
                 grid-area: 2 / 2 / 3 / 4;
                 max-width: 938px;
                 max-height: 335px;
-                background-image: url('/src/assets/photos/products/kitchen.svg');
+                background-image: url('/src/assets/photos/products/kitchen.jpg');
                 background-repeat: no-repeat;
                 background-size: cover;
                 position: relative;
