--- a/src/style/parts/_header.scss
+++ b/src/style/parts/_header.scss
@@ -2,6 +2,8 @@
     width: 100%;
     height: 100vh;
     background-image: url('/src/assets/backgrounds/Group 369.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .header {
