--- a/src/style/parts/_products.scss
+++ b/src/style/parts/_products.scss
@@ -1,7 +1,6 @@
 .products {
     margin-top: 100px;
     width: 100%;
-    height: 1000px;
     background: #111010;
     color: #fff;
 
@@ -13,19 +12,23 @@
         padding: 70px 0;
     }
 
-    .products-box {
-        margin: 60px 250px 0;
+    .products-grid {
+        display: grid;
+        grid-gap: 26px;
         text-align: center;
+        padding: 0 230px 61px;
 
-        .products-box-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-template-rows: repeat(2, 1fr);
-            grid-column-gap: 30px;
-            grid-row-gap: 30px;
-            height: 700px;
+        .products-grid-item {
+            position: relative;
 
-            .grid-item-desc {
+            img {
+                border-radius: 20px;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+            .products-desc {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -34,63 +37,73 @@
                 bottom: 0;
                 left: 0;
                 right: 0;
-                background: linear-gradient(180deg, rgba(17, 16, 16, 0) 0%, rgba(17, 16, 16, 0.74) 72.92%);
+                background: linear-gradient(180deg, rgba(17, 16, 16, 0) 0%, rgba(17, 16, 16, 0.74) 85%);
                 backdrop-filter: blur(1.5px);
                 /* Note: backdrop-filter has minimal browser support */
                 border-radius: 0px 0px 20px 20px;
+                transition: all 0.4s ease;
 
-                &__title {
+                .products-name {
                     font-weight: 600;
                     font-size: 24px;
                     line-height: 24px;
+                    transition: all 0.6s ease-out;
                 }
 
-                &__desc {
+                .products-location {
                     font-weight: 400;
                     font-size: 16px;
-                    line-height: 16px;
+                    line-height: 19px;
+                    transition: all 0.6s ease-out;
                 }
             }
+        }
 
-            .grid-item-1 {
-                grid-area: 1 / 1 / 3 / 2;
-                max-width: 454px;
-                max-height: 700px;
-                background-image: url('/src/assets/photos/products/bedroom.jpg');
-                background-repeat: no-repeat;
-                position: relative;
-                border-radius: 20px;
-            }
+        #grid-1 {
+            grid-row-start: 1;
+            grid-column-start: 1;
+            grid-row-end: 3;
+            grid-column-end: 2;
+        }
 
-            .grid-item-2 {
-                grid-area: 1 / 2 / 2 / 3;
-                max-width: 454px;
-                max-height: 335px;
-                background-image: url('/src/assets/photos/products/bathroom.jpg');
-                background-repeat: no-repeat;
-                position: relative;
-                border-radius: 20px;
-            }
+        #grid-2 {
+            grid-row-start: 1;
+            grid-column-start: 2;
 
-            .grid-item-3 {
-                grid-area: 1 / 3 / 2 / 4;
-                max-width: 454px;
-                max-height: 335px;
-                background-image: url('/src/assets/photos/products/outdoor.jpg');
-                background-repeat: no-repeat;
-                position: relative;
-                border-radius: 20px;
-            }
+            grid-row-end: 2;
+            grid-column-end: 3;
+        }
 
-            .grid-item-4 {
-                grid-area: 2 / 2 / 3 / 4;
-                max-width: 938px;
-                max-height: 335px;
-                background-image: url('/src/assets/photos/products/kitchen.jpg');
-                background-repeat: no-repeat;
-                background-size: cover;
-                position: relative;
-                border-radius: 20px;
+        #grid-3 {
+            grid-row-start: 1;
+            grid-column-start: 3;
+
+            grid-row-end: 2;
+            grid-column-end: 4;
+        }
+
+        #grid-4 {
+            grid-row-start: 2;
+            grid-column-start: 2;
+
+            grid-row-end: 3;
+            grid-column-end: 4;
+        }
+
+        .products-grid-item:hover {
+            cursor: pointer;
+
+            .products-desc {
+                height: 100%;
+
+                .products-name {
+                    font-size: 40px;
+                    line-height: 46px;
+                }
+
+                .products-location {
+                    font-size: 27px;
+                }
             }
         }
     }
