--- a/src/style/parts/_projects.scss
+++ b/src/style/parts/_projects.scss
@@ -16,7 +16,7 @@
         grid-template-columns: repeat(3, minmax(auto, 1fr));
         grid-gap: 26px;
 
-        padding: 0 230px;
+        padding: 0 230px 61px;
 
         .project-grid-item {
             position: relative;
@@ -37,10 +37,11 @@
                 bottom: 0;
                 left: 0;
                 right: 0;
-                background: linear-gradient(180deg, rgba(17, 16, 16, 0) 0%, rgba(17, 16, 16, 0.74) 72.92%);
+                background: linear-gradient(180deg, rgba(17, 16, 16, 0) 0%, rgba(17, 16, 16, 0.74) 85%);
                 backdrop-filter: blur(1.5px);
                 /* Note: backdrop-filter has minimal browser support */
                 border-radius: 0px 0px 20px 20px;
+                transition: all 0.4s ease;
 
                 .project-name {
                     font-weight: 600;
@@ -53,6 +54,15 @@
                     font-size: 16px;
                     line-height: 19px;
                 }
+            }
+        }
+
+        .project-grid-item:hover {
+            cursor: pointer;
+
+            .project-desc {
+                transform: scale(1.05);
+                height: 100%;
             }
         }
     }
