--- a/src/style/parts/_promo.scss
+++ b/src/style/parts/_promo.scss
@@ -42,9 +42,32 @@
 
         .promo-box-right {
             img {
+                width: 100%;
+                object-fit: cover;
                 border: 2px solid #fff;
                 border-radius: 50px;
             }
         }
+    }
+}
+
+@media (min-width:320px) and (max-width:425px) {
+    .promo {
+        margin: 180px 50px;
+
+        .promo-box {
+            display: inline;
+            text-align: center;
+
+            .promo-box-right {
+                display: none;
+            }
+        }
+    }
+}
+
+@media (min-width:426px) and (max-width:768px) {
+    .promo {
+        margin: 180px 50px;
     }
 }
