--- a/src/style/parts/_projects.scss
+++ b/src/style/parts/_projects.scss
@@ -67,3 +67,16 @@
         }
     }
 }
+
+@media (min-width: 320px) and (max-width:768px) {
+
+    .projects {
+        padding: 0 20px 20px;
+
+        .projects-grid {
+            display: flex;
+            flex-direction: column;
+            padding: 0;
+        }
+    }
+}
