--- a/src/style/parts/_about.scss
+++ b/src/style/parts/_about.scss
@@ -48,3 +48,30 @@
         }
     }
 }
+
+@media (min-width: 320px) and (max-width:425px) {
+    .about-us {
+        margin: 0 20px;
+
+        .about-us-left {
+            display: none;
+        }
+
+        .about-us-right {
+
+            &__title {
+                text-align: center;
+                font-size: 30px;
+            }
+        }
+    }
+}
+
+@media (min-width: 426px) and (max-width:768px) {
+
+    .about-us {
+        margin: 0 20px;
+        flex-direction: column-reverse;
+        gap: 30px;
+    }
+}
