--- a/src/style/parts/_service.scss
+++ b/src/style/parts/_service.scss
@@ -29,6 +29,7 @@
 
                 img {
                     width: 100%;
+                    height: auto;
                     object-fit: contain;
                 }
             }
@@ -59,6 +60,36 @@
                     font-weight: 700;
                     font-size: 16px;
                     line-height: 19px;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 320px) and (max-width:768px) {
+
+    .services {
+        margin: 50px 20px;
+
+        .services-flex {
+
+            .services-flex-item {
+                flex-direction: column-reverse;
+                padding: 20px;
+
+                .right-item {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                }
+            }
+
+            .services-flex-item:nth-child(2) {
+                flex-direction: column;
+                padding: 20px;
+
+                .right-item {
+                    width: 100%;
                 }
             }
         }
