--- a/src/style/parts/_promo.scss
+++ b/src/style/parts/_promo.scss
@@ -43,6 +43,7 @@
         .promo-box-right {
             img {
                 width: 100%;
+                height: auto;
                 object-fit: cover;
                 border: 2px solid #fff;
                 border-radius: 50px;
