--- a/src/style/parts/_collections.scss
+++ b/src/style/parts/_collections.scss
@@ -1,4 +1,8 @@
 .collection {
+    max-width: 100%;
+    min-height: 500px;
+    max-height: 100%;
+
     &__title {
         margin: 100px 0;
         font-weight: 700;
@@ -17,6 +21,10 @@
     height: 100%;
 
     .swiper-slide {
+        max-width: 100%;
+        min-width: 200px;
+        min-height: 400px;
+        max-height: 100%;
         text-align: center;
         border-radius: 20px;
         padding: 20px;
@@ -47,6 +55,9 @@
         }
 
         .collection-item-title {
+            min-width: 230px;
+            max-width: 100%;
+            min-height: 20px;
             font-weight: 600;
             font-size: 20px;
             line-height: 26px;
@@ -55,6 +66,10 @@
         }
 
         .collection-item-desc {
+            max-width: 100%;
+            min-width: 200px;
+            max-height: 100%;
+            min-height: 100px;
             font-weight: 400;
             font-size: 16px;
             line-height: 160%;
@@ -64,6 +79,10 @@
         }
 
         .btn {
+            max-width: 100%;
+            min-width: 190px;
+            max-height: 100%;
+            min-height: 50px;
             padding: 16px 39px;
             color: rgb(0, 0, 0);
             border: 2px solid rgb(0, 0, 0);
