--- a/src/style/parts/_products.scss
+++ b/src/style/parts/_products.scss
@@ -24,7 +24,7 @@
             img {
                 border-radius: 20px;
                 width: 100%;
-                height: 100%;
+                height: auto;
                 object-fit: cover;
             }
 
