--- a/src/style/parts/_header.scss
+++ b/src/style/parts/_header.scss
@@ -1,115 +1,147 @@
 .wrapper {
-    width: 100%;
-    height: 100vh;
-    background-image: url('/src/assets/backgrounds/Group 369.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+    background-color: #111010;
 
-.header {
-    font-family: 'Proxima Nova';
-
-    .navbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1rem 13%;
-
-        .nav-logo {
-            font-size: 2.1rem;
-            font-weight: 500;
-            color: #FFF;
-        }
-
-        .nav-menu {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            .nav-item {
-                margin-left: 5rem;
-                max-width: 100%;
-                min-width: 40px;
-
-                .nav-link {
-                    font-style: normal;
-                    font-weight: 600;
-                    font-size: 16px;
-                    line-height: 16px;
-                    text-transform: uppercase;
-
-                    color: #978D8D;
-                }
-
-                .nav-link:hover {
-                    color: #FFFFFF;
-                    transition: all 0.6s;
-                }
-            }
-        }
-
-        .hamburger {
-            display: block;
-            margin-left: 15px;
-
-            .bar {
-                display: block;
-                width: 25px;
-                height: 3px;
-                margin: 5px auto;
-                -webkit-transition: all 0.3s ease-in-out;
-                transition: all 0.3s ease-in-out;
-                background-color: #ffffff;
-            }
-        }
-    }
-}
-
-@media (max-width: 768px) {
-    .nav-menu {
-        position: fixed;
-        left: -100%;
-        top: 5rem;
-        flex-direction: column;
+    .header {
         background-color: #fff;
+        box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .1);
+        position: fixed;
+        top: 0;
         width: 100%;
-        height: 55vh;
-        border-radius: 10px;
-        text-align: center;
-        transition: 0.3s;
-        box-shadow:
-            0 10px 27px rgba(0, 0, 0, 0.05);
+        z-index: 3;
+
+        ul {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            overflow: hidden;
+            background-color: #fff;
+
+            li a {
+                display: block;
+                font-size: 15px;
+                padding: 20px;
+                text-decoration: none;
+                color: #111010;
+            }
+
+            li a:hover {
+                background-color: #f4f4f4;
+            }
+        }
+
+
+        .menu-btn:hover {
+            background-color: #f4f4f4;
+        }
+
+        .logo {
+            display: block;
+            float: left;
+            font-size: 2em;
+            padding: 20px;
+            text-decoration: none;
+            font-weight: 600;
+            color: #111010;
+        }
+
+        .menu {
+            clear: both;
+            max-height: 0;
+            transition: max-height .2s ease-out;
+        }
+
+        .menu-icon {
+            cursor: pointer;
+            display: inline-block;
+            float: right;
+            padding: 28px 20px;
+            position: relative;
+            user-select: none;
+
+            .navicon {
+                background: #333;
+                display: block;
+                height: 2px;
+                position: relative;
+                transition: background .2s ease-out;
+                width: 18px;
+            }
+
+            .navicon:before,
+            .navicon:after {
+                background: #333;
+                content: '';
+                display: block;
+                height: 100%;
+                position: absolute;
+                transition: all .2s ease-out;
+                width: 100%;
+            }
+
+            .navicon:before {
+                top: 5px;
+            }
+
+            .navicon:after {
+                top: -5px;
+            }
+        }
+
+        .menu-btn {
+            display: none;
+        }
+
+        .menu-btn:checked~.menu {
+            max-height: 340px;
+        }
+
+        .menu-btn:checked~.menu-icon .navicon {
+            background: transparent;
+        }
+
+        .menu-btn:checked~.menu-icon .navicon:before {
+            transform: rotate(-45deg);
+        }
+
+        .menu-btn:checked~.menu-icon .navicon:after {
+            transform: rotate(45deg);
+        }
+
+        .menu-btn:checked~.menu-icon:not(.steps) .navicon:before,
+        .menu-btn:checked~.menu-icon:not(.steps) .navicon:after {
+            top: 0;
+        }
     }
 
-    .nav-menu.active {
-        left: 0;
-    }
 
-    .nav-item {
-        margin: 2.5rem;
-    }
+    @media (min-width: 768px) {
+        .header {
+            position: fixed;
+            top: 0;
+            max-height: 62px;
 
-    .hamburger {
-        display: block;
-        cursor: pointer;
-    }
+            .logo {
+                font-size: 28px;
+            }
 
-    .hamburger.active .bar:nth-child(2) {
-        opacity: 0;
-    }
+            .menu {
+                clear: none;
+                float: right;
+                max-height: none;
 
-    .hamburger.active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-    }
+                li {
+                    float: left;
+                    font-size: 18px;
 
-    .hamburger.active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-    }
+                    a {
+                        padding: 20px 20px;
+                    }
+                }
+            }
 
-}
-
-@media (min-width: 769px) {
-    .nav-menu {
-        width: fit-content;
+            .menu-icon {
+                display: none;
+            }
+        }
     }
 }
