--- a/src/style/parts/_projects.scss
+++ b/src/style/parts/_projects.scss
@@ -80,3 +80,14 @@
         }
     }
 }
+
+@media (min-width:768px) and (max-width: 1200px) {
+
+    .projects {
+        padding: 0 20px 50px;
+
+        .projects-grid {
+            padding: 0;
+        }
+    }
+}
