--- a/src/style/parts/_service.scss
+++ b/src/style/parts/_service.scss
@@ -60,13 +60,20 @@
                     font-weight: 700;
                     font-size: 16px;
                     line-height: 19px;
+                    transition: all 0.3s;
+                }
+
+                .btn:hover {
+                    cursor: pointer;
+                    border-color: #686868;
+                    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
                 }
             }
         }
     }
 }
 
-@media (min-width: 320px) and (max-width:768px) {
+@media (min-width: 320px) and (max-width:1023px) {
 
     .services {
         margin: 50px 20px;
@@ -81,6 +88,14 @@
                     width: 100%;
                     display: flex;
                     flex-direction: column;
+
+                    &__title {
+                        padding: 20px;
+                    }
+
+                    &__desc {
+                        padding: 0 5%;
+                    }
                 }
             }
 
@@ -93,5 +108,11 @@
                 }
             }
         }
+    }
+}
+
+@media (min-width: 1024px) and (max-width:1439px) {
+    .services {
+        margin: 50px 100px;
     }
 }
